Adding non-class files to jar from source directory rather than build directory (or both, as the case turned out to be)

--- a/build.xml
+++ b/build.xml
@@ -77,6 +77,8 @@
         		<include name = "**/*.properties"/>
         	</fileset>
     	</jar>
+		
+		<delete dir="${distdir}/jarlib"/>
 	</target>
 
 	
