--- a/build.xml
+++ b/build.xml
@@ -63,9 +63,6 @@
         <jar jarfile="${distdir}/${pluginname}.jar" manifest="etc/MANIFEST.MF">
        		<fileset dir="${builddir}">
        			<include name="**/*.class"/>
-       			<include name="**/*.xsl"/>
-        		<include name = "**/*.properties"/>
-        		<include name = "**/*.gif"/>
        		</fileset>
         	<fileset dir="${distdir}/jarlib">
         		<include name="**/*"/>
@@ -77,8 +74,11 @@
         	</fileset>
         	<fileset dir="${srcdir}">
         		<include name = "**/*.properties"/>
+        		<include name="**/*.xsl"/>
         	</fileset>
     	</jar>
+		
+		<delete dir="${distdir}/jarlib"/>
 	</target>
 
 	
