put dependancy as 'all' so as to make it the last option - this way it will probably not be guessed if there has been a strong match already. This is a dirty dirty hack.

--- a/src/au/gov/naa/digipres/xena/plugin/plaintext/preferences.properties
+++ b/src/au/gov/naa/digipres/xena/plugin/plaintext/preferences.properties
@@ -8,6 +8,7 @@ customs= au.gov.naa.digipres.xena.plugin.plaintext.ConfigPlaintextCustom
 guiConfigureNormalisers = au.gov.naa.digipres.xena.plugin.plaintext.PlainTextGuiConfigure
 typePrinters = au.gov.naa.digipres.xena.plugin.plaintext.PlainTextPrinter
 printable = true
-dependancies = au/gov/naa/digipres/xena/plugin/basic
+# move this to the very end of the list as a last resort!
+dependancies = all
 properties = au.gov.naa.digipres.xena.plugin.plaintext.PlainTextProperties
 version= 2.0.0
