--- a/src/au/gov/naa/digipres/xena/plugin/plaintext/preferences.properties
+++ b/src/au/gov/naa/digipres/xena/plugin/plaintext/preferences.properties
@@ -8,7 +8,6 @@ customs= au.gov.naa.digipres.xena.plugin.plaintext.ConfigPlaintextCustom
 guiConfigureNormalisers = au.gov.naa.digipres.xena.plugin.plaintext.PlainTextGuiConfigure
 typePrinters = au.gov.naa.digipres.xena.plugin.plaintext.PlainTextPrinter
 printable = true
-# move this to the very end of the list as a last resort!
-dependancies = all
+dependancies = basic
 properties = au.gov.naa.digipres.xena.plugin.plaintext.PlainTextProperties
 version= 2.0.0
