Added new CSV plugin

--- a/ant.properties
+++ b/ant.properties
@@ -11,6 +11,7 @@ dpr_dist_dir=../dpr/dist
 
 base_dir=../base
 basic_dir=../basic
+csv_dir=../csv
 dataset_dir=../dataset
 email_dir=../email
 html_dir=../html
