--- a/src/au/gov/naa/digipres/xena/plugin/csv/preferences.properties
+++ b/src/au/gov/naa/digipres/xena/plugin/csv/preferences.properties
@@ -2,6 +2,6 @@ types=  au.gov.naa.digipres.xena.plugin.csv.CsvFileType au.gov.naa.digipres.xena
 guessers= au.gov.naa.digipres.xena.plugin.csv.CsvGuesser
 inputMap= au.gov.naa.digipres.xena.plugin.csv.CsvToXenaCsvNormaliser/au.gov.naa.digipres.xena.plugin.csv.CsvFileType au.gov.naa.digipres.xena.plugin.csv.XenaCsvToCsvDenormaliser/au.gov.naa.digipres.xena.plugin.csv.XenaCsvFileType
 outputMap= au.gov.naa.digipres.xena.plugin.csv.CsvToXenaCsvNormaliser/au.gov.naa.digipres.xena.plugin.csv.CsvFileType au.gov.naa.digipres.xena.plugin.csv.XenaCsvToCsvDenormaliser/au.gov.naa.digipres.xena.plugin.csv.XenaCsvFileType
-#views= au.gov.naa.digipres.xena.plugin.csv.CsvView
+views= au.gov.naa.digipres.xena.plugin.csv.CsvView
 #helpsets= doc/DatasetHelp
 version= 2.0.0
