removed all refernces to component manager singletons - now all reference the plugin manager singleton. Ultimately, even this will go...

--- a/src/au/gov/naa/digipres/xena/plugin/multipage/preferences.properties
+++ b/src/au/gov/naa/digipres/xena/plugin/multipage/preferences.properties
@@ -6,5 +6,5 @@ guessers = au.gov.naa.digipres.xena.plugin.multipage.MultiPageGuesser
 #normalisers = au.gov.naa.digipres.xena.plugin.multipage.MultiPageNormaliser
 inputMap = au.gov.naa.digipres.xena.plugin.multipage.MultiPageNormaliser/au.gov.naa.digipres.xena.plugin.multipage.MultiPageFileType
 outputMap = au.gov.naa.digipres.xena.plugin.multipage.MultiPageNormaliser/au.gov.naa.digipres.xena.plugin.multipage.XenaMultiPageFileType
-helpsets = doc/MultipageHelp
+#helpsets = doc/MultipageHelp
 version= 2.0.0
