Using new version (2.74) of jpedal

--- a/build.xml
+++ b/build.xml
@@ -67,6 +67,8 @@
        		</fileset>
         	<fileset dir="${distdir}/jarlib">
         		<include name="**/*"/>
+        		<exclude name="**/*.RSA"/>
+        		<exclude name="**/*.SF"/>
         	</fileset>
         	<fileset dir=".">
 	    		<include name = "images/*.*"/>
