--- a/etc/buildnum.properties
+++ b/etc/buildnum.properties
@@ -1,3 +1,3 @@
 #ANT Task: ch.oscg.jreleaseinfo.BuildNumberHandler
-#Tue Mar 28 05:29:38 GMT 2006
-build.num.last=13
+#Wed Mar 29 15:49:51 EST 2006
+build.num.last=18
