--- a/etc/buildnum.properties
+++ b/etc/buildnum.properties
@@ -1,3 +1,6 @@
 #ANT Task: ch.oscg.jreleaseinfo.BuildNumberHandler
-#Wed Apr 05 10:23:29 EST 2006
-build.num.last=24
+#Wed Apr 05 01:08:22 GMT 2006
+build.num.last=26
+>>>>>>>=1.8
+<<<<<<<=buildnum.properties
+=\=\=\=\=\=\=
