--- a/etc/buildnum.properties
+++ b/etc/buildnum.properties
@@ -1,6 +1,3 @@
 #ANT Task: ch.oscg.jreleaseinfo.BuildNumberHandler
-#Wed Apr 05 01:08:22 GMT 2006
+#Thu Apr 06 10:46:01 EST 2006
 build.num.last=26
->>>>>>>=1.8
-<<<<<<<=buildnum.properties
-=\=\=\=\=\=\=
