Removed original Xena and all references to it. Removed base plugin Removed HTTP normaliser, view etc

--- a/src/au/gov/naa/digipres/xena/plugin/html/preferences.properties
+++ b/src/au/gov/naa/digipres/xena/plugin/html/preferences.properties
@@ -1,11 +1,10 @@
-types= au.gov.naa.digipres.xena.plugin.html.XenaHtmlFileType au.gov.naa.digipres.xena.plugin.html.HtmlFileType au.gov.naa.digipres.xena.plugin.html.HttpType au.gov.naa.digipres.xena.plugin.html.XenaHttpFileType au.gov.naa.digipres.xena.plugin.html.XenaWebSiteFileType
+types= au.gov.naa.digipres.xena.plugin.html.XenaHtmlFileType au.gov.naa.digipres.xena.plugin.html.HtmlFileType
 guessers= au.gov.naa.digipres.xena.plugin.html.HtmlGuesser
 #normalisers= au.gov.naa.digipres.xena.plugin.html.HtmlToXenaHtmlNormaliser au.gov.naa.digipres.xena.plugin.html.HttpToXenaHttpNormaliser au.gov.naa.digipres.xena.plugin.html.XenaHtmlToHtmlDeNormaliser
-inputMap= au.gov.naa.digipres.xena.plugin.html.HtmlToXenaHtmlNormaliser/au.gov.naa.digipres.xena.plugin.html.HtmlFileType au.gov.naa.digipres.xena.plugin.html.HttpToXenaHttpNormaliser/au.gov.naa.digipres.xena.plugin.html.HttpType au.gov.naa.digipres.xena.plugin.html.XenaHtmlToHtmlDeNormaliser/au.gov.naa.digipres.xena.plugin.html.XenaHtmlFileType
-outputMap= au.gov.naa.digipres.xena.plugin.html.XenaHtmlToHtmlDeNormaliser/au.gov.naa.digipres.xena.plugin.html.HtmlFileType au.gov.naa.digipres.xena.plugin.html.HtmlToXenaHtmlNormaliser/au.gov.naa.digipres.xena.plugin.html.XenaHtmlFileType au.gov.naa.digipres.xena.plugin.html.HttpToXenaHttpNormaliser/au.gov.naa.digipres.xena.plugin.html.XenaHttpFileType
-views= au.gov.naa.digipres.xena.plugin.html.HtmlView au.gov.naa.digipres.xena.plugin.html.HttpView
+inputMap= au.gov.naa.digipres.xena.plugin.html.HtmlToXenaHtmlNormaliser/au.gov.naa.digipres.xena.plugin.html.HtmlFileType au.gov.naa.digipres.xena.plugin.html.XenaHtmlToHtmlDeNormaliser/au.gov.naa.digipres.xena.plugin.html.XenaHtmlFileType
+outputMap= au.gov.naa.digipres.xena.plugin.html.XenaHtmlToHtmlDeNormaliser/au.gov.naa.digipres.xena.plugin.html.HtmlFileType au.gov.naa.digipres.xena.plugin.html.HtmlToXenaHtmlNormaliser/au.gov.naa.digipres.xena.plugin.html.XenaHtmlFileType
+views= au.gov.naa.digipres.xena.plugin.html.HtmlView
 #au.gov.naa.digipres.xena.plugin.html.HtmlView
-guiConfigureNormalisers = au.gov.naa.digipres.xena.plugin.html.HttpToXenaHttpGuiConfigure
 helpsets = doc/HtmlHelp
 dependancies = au/gov/naa/digipres/xena/plugin/plaintext au/gov/naa/digipres/xena/plugin/basic
 version= 2.0.0
