added test suite and preferences file.

--- a/src/au/gov/naa/digipres/xena/demo/orgx/preferences.properties
+++ b/src/au/gov/naa/digipres/xena/demo/orgx/preferences.properties
@@ -1,2 +1,3 @@
 fileNamers = au.gov.naa.digipres.xena.demo.orgx.OrgXFileNamer
+filters= orgxFilter/au.gov.naa.digipres.xena.demo.orgx.OrgXMetaDataWrapper/au.gov.naa.digipres.xena.demo.orgx.OrgxUnwrapper
 version = 2.0.0
