First cut of Properties how-to

--- a/09_preferences/orgx_plugin/build.xml
+++ b/09_preferences/orgx_plugin/build.xml
@@ -4,17 +4,18 @@
 	<property name="srcdir" value="src"/>
 	<property name="etcdir" value="etc"/>
 	<property name="builddir" value="bin"/>
-        <property name="distdir" value="dist"/>
+    <property name="distdir" value="dist"/>
 	<property name="extdir" value="ext"/>
+	<property name="xenadir" value="../../xena"/>
 
 	<!-- required project jar files -->
-	<property name="xenajarlocation" value="../../xena/xena.jar" />
+	<property name="xenajarlocation" value="${xenadir}/xena.jar" />
 	
 	<path id="compile.path">
 		<fileset dir="ext">
 			<include name="**/*.jar"/>
 		</fileset>
-		<pathelement location="${xenajarlocation}"/>
+		<pathelement location="${xenajarlocation}"/>		
 	</path>
 	
 	<target name="clean" depends="" description="--> Clear all output files">
@@ -43,6 +44,19 @@
         			<include name = "**/*.properties"/>
         		</fileset>
     		</jar>
+	</target>
+	
+	<target name="copyjar" description="Copies the plugin jar file to the xena plugins directory" depends="makejar">
+		<mkdir dir="${xenadir}/plugins"/>
+		<copy file="${distdir}/${pluginname}.jar" todir="${xenadir}/plugins" />
+	</target>
+	
+	<target name="run" description="Runs Xena Lite" depends="copyjar">
+		<java dir="${xenadir}" 
+			  classpath="${xenadir}/xena.jar" 
+			  classname="au.gov.naa.digipres.xena.litegui.LiteMainFrame"
+			  fork="true"
+			  spawn="true"/>
 	</target>
 	
 </project>
