--- a/09_preferences/orgx_plugin/src/au/gov/naa/digipres/xena/demo/orgx/preferences.properties
+++ b/09_preferences/orgx_plugin/src/au/gov/naa/digipres/xena/demo/orgx/preferences.properties
@@ -1,7 +1,4 @@
-
-types=  au.gov.naa.digipres.xena.demo.foo.FooFileType au.gov.naa.digipres.xena.demo.foo.XenaFooFileType
-guessers = au.gov.naa.digipres.xena.demo.foo.FooGuesser
-inputMap= au.gov.naa.digipres.xena.demo.foo.FooNormaliser/au.gov.naa.digipres.xena.demo.foo.FooFileType 
-outputMap= au.gov.naa.digipres.xena.demo.foo.FooNormaliser/au.gov.naa.digipres.xena.demo.foo.XenaFooFileType 
-views = au.gov.naa.digipres.xena.demo.foo.FooViewer
-version=2.0.0
+fileNamers = au.gov.naa.digipres.xena.demo.orgx.OrgXFileNamer
+filters= orgxFilter/au.gov.naa.digipres.xena.demo.orgx.OrgXMetaDataWrapper/au.gov.naa.digipres.xena.demo.orgx.OrgxUnwrapper
+properties = au.gov.naa.digipres.xena.demo.orgx.OrgXProperties
+version = 2.0.0
