Cleaned up meta data wrapper preferences format - now just, wrapper/unwrapper and wrapper must have name included via getName method..

--- a/src/au/gov/naa/digipres/xena/plugin/naa/preferences.properties
+++ b/src/au/gov/naa/digipres/xena/plugin/naa/preferences.properties
@@ -1,5 +1,5 @@
 fileNamers = au.gov.naa.digipres.xena.plugin.naa.NaaFileNamer
-filters= naaFilter/au.gov.naa.digipres.xena.plugin.naa.NaaPackageWrapNormaliser/au.gov.naa.digipres.xena.plugin.naa.NaaPackageUnwrapFilter
+metaDataWrappers= au.gov.naa.digipres.xena.plugin.naa.NaaPackageWrapNormaliser/au.gov.naa.digipres.xena.plugin.naa.NaaPackageUnwrapFilter
 types = au.gov.naa.digipres.xena.plugin.naa.NaaPackageFileType
 #dependancies = au/gov/naa/digipres/xena/plugin/basic
 helpsets= doc/NaaHelp
