*** empty log message ***

--- a/etc/buildnum.properties
+++ b/etc/buildnum.properties
@@ -1,3 +1,6 @@
 #ANT Task: ch.oscg.jreleaseinfo.BuildNumberHandler
-#Tue May 09 09:55:59 EST 2006
-build.num.last=30
+#Mon May 15 01:32:37 GMT 2006
+build.num.last=31
+>>>>>>>=1.12
+=\=\=\=\=\=\=
+<<<<<<<=buildnum.properties
