--- a/etc/buildnum.properties
+++ b/etc/buildnum.properties
@@ -1,6 +1,3 @@
 #ANT Task: ch.oscg.jreleaseinfo.BuildNumberHandler
-#Mon May 15 01:32:37 GMT 2006
-build.num.last=31
->>>>>>>=1.12
-=\=\=\=\=\=\=
-<<<<<<<=buildnum.properties
+#Tue May 16 14:56:54 EST 2006
+build.num.last=32
