*** empty log message ***

--- a/etc/buildnum.properties
+++ b/etc/buildnum.properties
@@ -1,3 +1,6 @@
 #ANT Task: ch.oscg.jreleaseinfo.BuildNumberHandler
-#Tue May 16 14:56:54 EST 2006
-build.num.last=32
+#Wed May 17 23:51:50 GMT 2006
+build.num.last=34
+>>>>>>>=1.14
+<<<<<<<=buildnum.properties
+=\=\=\=\=\=\=
