--- a/etc/buildnum.properties
+++ b/etc/buildnum.properties
@@ -1,6 +1,3 @@
 #ANT Task: ch.oscg.jreleaseinfo.BuildNumberHandler
-#Wed May 17 23:51:50 GMT 2006
-build.num.last=34
->>>>>>>=1.14
-<<<<<<<=buildnum.properties
-=\=\=\=\=\=\=
+#Thu May 18 16:21:22 EST 2006
+build.num.last=39
