Commented out plaintext properties as they are not wanted for release of xena lite 3.0. Will need to be re-added later.

--- a/src/au/gov/naa/digipres/xena/plugin/plaintext/preferences.properties
+++ b/src/au/gov/naa/digipres/xena/plugin/plaintext/preferences.properties
@@ -7,5 +7,5 @@ helpsets = doc/PlaintextHelp
 typePrinters = au.gov.naa.digipres.xena.plugin.plaintext.PlainTextPrinter
 printable = true
 #dependancies = au/gov/naa/digipres/xena/plugin/basic
-properties = au.gov.naa.digipres.xena.plugin.plaintext.PlainTextProperties
+#properties = au.gov.naa.digipres.xena.plugin.plaintext.PlainTextProperties
 version= 2.0.0
