*** empty log message ***

--- a/etc/buildnum.properties
+++ b/etc/buildnum.properties
@@ -1,3 +1,6 @@
 #ANT Task: ch.oscg.jreleaseinfo.BuildNumberHandler
-#Mon May 22 13:35:54 EST 2006
-build.num.last=42
+#Sun May 28 23:59:41 GMT 2006
+build.num.last=48
+>>>>>>>=1.18
+<<<<<<<=buildnum.properties
+=\=\=\=\=\=\=
