--- a/etc/buildnum.properties
+++ b/etc/buildnum.properties
@@ -1,6 +1,3 @@
 #ANT Task: ch.oscg.jreleaseinfo.BuildNumberHandler
-#Sun May 28 23:59:41 GMT 2006
-build.num.last=48
->>>>>>>=1.18
-<<<<<<<=buildnum.properties
-=\=\=\=\=\=\=
+#Mon May 29 14:56:00 EST 2006
+build.num.last=44
