*** empty log message ***

--- a/etc/buildnum.properties
+++ b/etc/buildnum.properties
@@ -1,3 +1,6 @@
 #ANT Task: ch.oscg.jreleaseinfo.BuildNumberHandler
-#Mon May 29 14:56:00 EST 2006
-build.num.last=44
+#Mon May 29 23:12:55 GMT 2006
+build.num.last=47
+>>>>>>>=1.20
+=\=\=\=\=\=\=
+<<<<<<<=buildnum.properties
