--- a/etc/buildnum.properties
+++ b/etc/buildnum.properties
@@ -1,6 +1,3 @@
 #ANT Task: ch.oscg.jreleaseinfo.BuildNumberHandler
-#Mon May 29 23:12:55 GMT 2006
-build.num.last=47
->>>>>>>=1.20
-=\=\=\=\=\=\=
-<<<<<<<=buildnum.properties
+#Mon May 29 17:02:40 EST 2006
+build.num.last=46
