added view to preferences.

--- a/src/au/gov/naa/digipres/xena/demo/orgx/preferences.properties
+++ b/src/au/gov/naa/digipres/xena/demo/orgx/preferences.properties
@@ -1,4 +1,5 @@
 fileNamers = au.gov.naa.digipres.xena.demo.orgx.OrgXFileNamer
 filters= orgxFilter/au.gov.naa.digipres.xena.demo.orgx.OrgXMetaDataWrapper/au.gov.naa.digipres.xena.demo.orgx.OrgxUnwrapper
+views = au.gov.naa.digipres.xena.demo.orgx.OrgxView
 properties = au.gov.naa.digipres.xena.demo.orgx.OrgXProperties
 version = 2.0.0
