added type and all good.

--- a/src/au/gov/naa/digipres/xena/demo/orgx/preferences.properties
+++ b/src/au/gov/naa/digipres/xena/demo/orgx/preferences.properties
@@ -1,5 +1,6 @@
 fileNamers = au.gov.naa.digipres.xena.demo.orgx.OrgXFileNamer
-filters= orgxFilter/au.gov.naa.digipres.xena.demo.orgx.OrgXMetaDataWrapper/au.gov.naa.digipres.xena.demo.orgx.OrgxUnwrapper
+metaDataWrappers= au.gov.naa.digipres.xena.demo.orgx.OrgXMetaDataWrapper/au.gov.naa.digipres.xena.demo.orgx.OrgxUnwrapper
 views = au.gov.naa.digipres.xena.demo.orgx.OrgxView
+types = au.gov.naa.digipres.xena.demo.orgx.OrgXType
 properties = au.gov.naa.digipres.xena.demo.orgx.OrgXProperties
 version = 2.0.0
