Passing NormaliserResults to child normalisation processes Added MessageType to indicate a child message of a mail archive

--- a/src/au/gov/naa/digipres/xena/plugin/email/preferences.properties
+++ b/src/au/gov/naa/digipres/xena/plugin/email/preferences.properties
@@ -7,5 +7,5 @@ outputMap= au.gov.naa.digipres.xena.plugin.email.EmailToXenaEmailNormaliser/au.g
 views= au.gov.naa.digipres.xena.plugin.email.EmailView au.gov.naa.digipres.xena.plugin.email.MailboxView
 batchFilters= au.gov.naa.digipres.xena.plugin.email.TrimBatchFilter
 #helpsets = doc/EmailHelp
-dependancies = au/gov/naa/digipres/xena/plugin/plaintext au/gov/naa/digipres/xena/plugin/html
+# dependancies = au/gov/naa/digipres/xena/plugin/plaintext au/gov/naa/digipres/xena/plugin/html
 version= 2.0.0
