Commented out dependancies line

--- a/src/au/gov/naa/digipres/xena/plugin/html/preferences.properties
+++ b/src/au/gov/naa/digipres/xena/plugin/html/preferences.properties
@@ -6,5 +6,5 @@ outputMap= au.gov.naa.digipres.xena.plugin.html.XenaHtmlToHtmlDeNormaliser/au.go
 views= au.gov.naa.digipres.xena.plugin.html.HtmlView
 #au.gov.naa.digipres.xena.plugin.html.HtmlView
 helpsets = doc/HtmlHelp
-dependancies = au/gov/naa/digipres/xena/plugin/plaintext au/gov/naa/digipres/xena/plugin/basic
+# dependancies = au/gov/naa/digipres/xena/plugin/plaintext au/gov/naa/digipres/xena/plugin/basic
 version= 2.0.0
