Commented out dependancies line

--- a/src/au/gov/naa/digipres/xena/plugin/multipage/preferences.properties
+++ b/src/au/gov/naa/digipres/xena/plugin/multipage/preferences.properties
@@ -1,6 +1,6 @@
 types= au.gov.naa.digipres.xena.plugin.multipage.XenaMultiPageFileType au.gov.naa.digipres.xena.plugin.multipage.MultiPageFileType
 views= au.gov.naa.digipres.xena.plugin.multipage.MultiPageView
-dependancies = au/gov/naa/digipres/xena/plugin/basic
+# dependancies = au/gov/naa/digipres/xena/plugin/basic
 guessers = au.gov.naa.digipres.xena.plugin.multipage.MultiPageGuesser
 #guiConfigureNormalisers = au.gov.naa.digipres.xena.plugin.multipage.MultiPageGuiConfigure
 #normalisers = au.gov.naa.digipres.xena.plugin.multipage.MultiPageNormaliser
