Put all dependancy back in

--- a/src/au/gov/naa/digipres/xena/plugin/xml/preferences.properties
+++ b/src/au/gov/naa/digipres/xena/plugin/xml/preferences.properties
@@ -3,7 +3,7 @@ views= au.gov.naa.digipres.xena.plugin.xml.XmlRawView au.gov.naa.digipres.xena.p
 inputMap= au.gov.naa.digipres.xena.plugin.xml.XmlToXenaXmlNormaliser/au.gov.naa.digipres.xena.plugin.xml.XmlFileType
 outputMap= au.gov.naa.digipres.xena.plugin.xml.XmlToXenaXmlNormaliser/au.gov.naa.digipres.xena.plugin.xml.XenaXmlFileType
 guessers= au.gov.naa.digipres.xena.plugin.xml.XenaGuesser au.gov.naa.digipres.xena.plugin.xml.XmlGuesser
-# dependancies = all
+dependancies = all
 version= 2.0.0
 xmlViewTypes = package
 helpsets= doc/XmlHelp
