Using properties to get the location of the flac executable

--- a/src/au/gov/naa/digipres/xena/plugin/audio/preferences.properties
+++ b/src/au/gov/naa/digipres/xena/plugin/audio/preferences.properties
@@ -3,4 +3,5 @@ guessers= au.gov.naa.digipres.xena.plugin.audio.WavGuesser au.gov.naa.digipres.x
 inputMap= au.gov.naa.digipres.xena.plugin.audio.AudioNormaliser/au.gov.naa.digipres.xena.plugin.audio.WavType,au.gov.naa.digipres.xena.plugin.audio.MP3Type,au.gov.naa.digipres.xena.plugin.audio.FlacType,au.gov.naa.digipres.xena.plugin.audio.PcmType
 outputMap= au.gov.naa.digipres.xena.plugin.audio.AudioNormaliser/au.gov.naa.digipres.xena.plugin.audio.FlacType
 views= au.gov.naa.digipres.xena.plugin.audio.AudioPlayerView
+properties = au.gov.naa.digipres.xena.plugin.audio.AudioProperties
 version= 0.0.1
