Using properties to set the location of the readpst executable

--- a/src/au/gov/naa/digipres/xena/plugin/email/preferences.properties
+++ b/src/au/gov/naa/digipres/xena/plugin/email/preferences.properties
@@ -8,4 +8,5 @@ views= au.gov.naa.digipres.xena.plugin.email.EmailView au.gov.naa.digipres.xena.
 batchFilters= au.gov.naa.digipres.xena.plugin.email.TrimBatchFilter
 #helpsets = doc/EmailHelp
 # dependancies = au/gov/naa/digipres/xena/plugin/plaintext au/gov/naa/digipres/xena/plugin/html
+properties=au.gov.naa.digipres.xena.plugin.email.EmailProperties
 version= 2.0.0
