--- a/build.xml
+++ b/build.xml
@@ -66,7 +66,9 @@
        		</fileset>
         	<fileset dir="${distdir}/jarlib">
         		<include name="**/*"/>
-        	</fileset>
+        		<exclude name="**/*.RSA"/>
+        		<exclude name="**/*.SF"/>
+       	</fileset>
         	<fileset dir=".">
 	    		<include name = "images/*.*"/>
 	    		<include name = "*.properties"/>
