added audio plugin

--- a/ant.properties
+++ b/ant.properties
@@ -9,6 +9,7 @@ xena_dist_dir=../xena/dist
 dpr_dir=../dpr
 dpr_dist_dir=../dpr/dist
 
+audio_dir=../audio
 basic_dir=../basic
 csv_dir=../csv
 dataset_dir=../dataset
