Fixed and simplified base64 encoding and decoding

--- a/src/au/gov/naa/digipres/xena/plugin/pdf/preferences.properties
+++ b/src/au/gov/naa/digipres/xena/plugin/pdf/preferences.properties
@@ -1,8 +1,8 @@
 types= au.gov.naa.digipres.xena.plugin.pdf.XenaPdfFileType au.gov.naa.digipres.xena.plugin.pdf.PdfFileType
 guessers= au.gov.naa.digipres.xena.plugin.pdf.PdfGuesser
-inputMap= au.gov.naa.digipres.xena.plugin.pdf.PdfToXenaPdfNormaliser/au.gov.naa.digipres.xena.plugin.pdf.PdfFileType
+inputMap= au.gov.naa.digipres.xena.plugin.pdf.PdfToXenaPdfNormaliser/au.gov.naa.digipres.xena.plugin.pdf.PdfFileType au.gov.naa.digipres.xena.plugin.pdf.PdfDeNormaliser/au.gov.naa.digipres.xena.plugin.pdf.XenaPdfFileType
 #au.gov.naa.digipres.xena.plugin.pdf.XenaPdfToPdfDeNormaliser/au.gov.naa.digipres.xena.plugin.plaintext.XenaPdfFileType
-outputMap= au.gov.naa.digipres.xena.plugin.pdf.PdfToXenaPdfNormaliser/au.gov.naa.digipres.xena.plugin.pdf.XenaPdfFileType
+outputMap= au.gov.naa.digipres.xena.plugin.pdf.PdfToXenaPdfNormaliser/au.gov.naa.digipres.xena.plugin.pdf.XenaPdfFileType au.gov.naa.digipres.xena.plugin.pdf.PdfDeNormaliser/au.gov.naa.digipres.xena.plugin.pdf.XenaPdfFileType
 #au.gov.naa.digipres.xena.plugin.pdf.XenaPdfToPdfDeNormaliser/au.gov.naa.digipres.xena.plugin.pdf.PdfFileType
 views= au.gov.naa.digipres.xena.plugin.pdf.PdfView
 #helpsets = PdfHelp
