Fixed and simplified base64 encoding and decoding Added new DeNormalisers

--- a/src/au/gov/naa/digipres/xena/plugin/audio/preferences.properties
+++ b/src/au/gov/naa/digipres/xena/plugin/audio/preferences.properties
@@ -1,7 +1,7 @@
-types= au.gov.naa.digipres.xena.plugin.audio.WavType au.gov.naa.digipres.xena.plugin.audio.MP3Type au.gov.naa.digipres.xena.plugin.audio.FlacType au.gov.naa.digipres.xena.plugin.audio.PcmType
+types= au.gov.naa.digipres.xena.plugin.audio.WavType au.gov.naa.digipres.xena.plugin.audio.MP3Type au.gov.naa.digipres.xena.plugin.audio.FlacType au.gov.naa.digipres.xena.plugin.audio.PcmType au.gov.naa.digipres.xena.plugin.audio.XenaAudioFileType
 guessers= au.gov.naa.digipres.xena.plugin.audio.WavGuesser au.gov.naa.digipres.xena.plugin.audio.MP3Guesser au.gov.naa.digipres.xena.plugin.audio.FlacGuesser au.gov.naa.digipres.xena.plugin.audio.PcmGuesser
-inputMap= au.gov.naa.digipres.xena.plugin.audio.AudioNormaliser/au.gov.naa.digipres.xena.plugin.audio.WavType,au.gov.naa.digipres.xena.plugin.audio.MP3Type,au.gov.naa.digipres.xena.plugin.audio.FlacType,au.gov.naa.digipres.xena.plugin.audio.PcmType
-outputMap= au.gov.naa.digipres.xena.plugin.audio.AudioNormaliser/au.gov.naa.digipres.xena.plugin.audio.FlacType
+inputMap= au.gov.naa.digipres.xena.plugin.audio.AudioNormaliser/au.gov.naa.digipres.xena.plugin.audio.WavType,au.gov.naa.digipres.xena.plugin.audio.MP3Type,au.gov.naa.digipres.xena.plugin.audio.FlacType,au.gov.naa.digipres.xena.plugin.audio.PcmType au.gov.naa.digipres.xena.plugin.audio.AudioDeNormaliser/au.gov.naa.digipres.xena.plugin.audio.XenaAudioFileType
+outputMap= au.gov.naa.digipres.xena.plugin.audio.AudioNormaliser/au.gov.naa.digipres.xena.plugin.audio.XenaAudioFileType au.gov.naa.digipres.xena.plugin.audio.AudioDeNormaliser/au.gov.naa.digipres.xena.plugin.audio.FlacType
 views= au.gov.naa.digipres.xena.plugin.audio.AudioPlayerView
 properties = au.gov.naa.digipres.xena.plugin.audio.AudioProperties
 version= 0.0.1
