Added multipage denormaliser.

--- a/src/au/gov/naa/digipres/xena/plugin/multipage/preferences.properties
+++ b/src/au/gov/naa/digipres/xena/plugin/multipage/preferences.properties
@@ -4,7 +4,7 @@ views= au.gov.naa.digipres.xena.plugin.multipage.MultiPageView
 guessers = au.gov.naa.digipres.xena.plugin.multipage.MultiPageGuesser
 #guiConfigureNormalisers = au.gov.naa.digipres.xena.plugin.multipage.MultiPageGuiConfigure
 #normalisers = au.gov.naa.digipres.xena.plugin.multipage.MultiPageNormaliser
-inputMap = au.gov.naa.digipres.xena.plugin.multipage.MultiPageNormaliser/au.gov.naa.digipres.xena.plugin.multipage.MultiPageFileType
-outputMap = au.gov.naa.digipres.xena.plugin.multipage.MultiPageNormaliser/au.gov.naa.digipres.xena.plugin.multipage.XenaMultiPageFileType
+inputMap = au.gov.naa.digipres.xena.plugin.multipage.MultiPageNormaliser/au.gov.naa.digipres.xena.plugin.multipage.MultiPageFileType au.gov.naa.digipres.xena.plugin.multipage.MultiPageDeNormaliser/au.gov.naa.digipres.xena.plugin.multipage.XenaMultiPageFileType
+outputMap = au.gov.naa.digipres.xena.plugin.multipage.MultiPageNormaliser/au.gov.naa.digipres.xena.plugin.multipage.XenaMultiPageFileType au.gov.naa.digipres.xena.plugin.multipage.MultiPageDeNormaliser/au.gov.naa.digipres.xena.plugin.multipage.MultiPageFileType
 #helpsets = doc/MultipageHelp
 version= 2.0.0
