--- a/src/au/gov/naa/digipres/xena/plugin/naa/preferences.properties
+++ b/src/au/gov/naa/digipres/xena/plugin/naa/preferences.properties
@@ -1,5 +1,5 @@
 fileNamers = au.gov.naa.digipres.xena.plugin.naa.NaaFileNamer
-metaDataWrappers= au.gov.naa.digipres.xena.plugin.naa.NaaPackageWrapNormaliser/au.gov.naa.digipres.xena.plugin.naa.NaaPackageUnwrapFilter
+metaDataWrappers= au.gov.naa.digipres.xena.plugin.naa.NaaPackageWrapNormaliser/au.gov.naa.digipres.xena.plugin.naa.NaaPackageUnwrapFilter au.gov.naa.digipres.xena.plugin.naa.NaaSignedAipWrapNormaliser/au.gov.naa.digipres.xena.plugin.naa.NaaSignedAipUnwrapFilter
 types = au.gov.naa.digipres.xena.plugin.naa.NaaPackageFileType
 #dependancies = au/gov/naa/digipres/xena/plugin/basic
 helpsets= doc/NaaHelp
