--- a/ant.properties
+++ b/ant.properties
@@ -6,6 +6,7 @@ xena_dist_dir=../xena/dist
 dpr_dir=../dpr
 dpr_dist_dir=../dpr/dist
 
+archive_dir=../archive
 audio_dir=../audio
 basic_dir=../basic
 csv_dir=../csv
