Added code for UnsupportedType guessing and normalising

--- a/src/au/gov/naa/digipres/xena/plugin/naa/preferences.properties
+++ b/src/au/gov/naa/digipres/xena/plugin/naa/preferences.properties
@@ -1,6 +1,9 @@
+types = au.gov.naa.digipres.xena.plugin.naa.unsupported.UnsupportedType au.gov.naa.digipres.xena.plugin.naa.NaaPackageFileType au.gov.naa.digipres.xena.plugin.naa.unsupported.AviType au.gov.naa.digipres.xena.plugin.naa.unsupported.FlashType au.gov.naa.digipres.xena.plugin.naa.unsupported.MacWordType au.gov.naa.digipres.xena.plugin.naa.unsupported.MovType au.gov.naa.digipres.xena.plugin.naa.unsupported.MpegType au.gov.naa.digipres.xena.plugin.naa.unsupported.VisioType
+guessers = au.gov.naa.digipres.xena.plugin.naa.unsupported.UnsupportedTypeGuesser
+inputMap = au.gov.naa.digipres.xena.plugin.naa.unsupported.UnsupportedTypeNormaliser/au.gov.naa.digipres.xena.plugin.naa.unsupported.UnsupportedType,au.gov.naa.digipres.xena.plugin.naa.unsupported.AviType,au.gov.naa.digipres.xena.plugin.naa.unsupported.FlashType,au.gov.naa.digipres.xena.plugin.naa.unsupported.MacWordType,au.gov.naa.digipres.xena.plugin.naa.unsupported.MovType,au.gov.naa.digipres.xena.plugin.naa.unsupported.MpegType,au.gov.naa.digipres.xena.plugin.naa.unsupported.VisioType
+outputMap = au.gov.naa.digipres.xena.plugin.naa.unsupported.UnsupportedTypeNormaliser/au.gov.naa.digipres.xena.kernel.type.XenaBinaryFileType
 fileNamers = au.gov.naa.digipres.xena.plugin.naa.NaaFileNamer
 metaDataWrappers= au.gov.naa.digipres.xena.plugin.naa.NaaPackageWrapNormaliser/au.gov.naa.digipres.xena.plugin.naa.NaaPackageUnwrapFilter au.gov.naa.digipres.xena.plugin.naa.NaaSignedAipWrapNormaliser/au.gov.naa.digipres.xena.plugin.naa.NaaSignedAipUnwrapFilter
-types = au.gov.naa.digipres.xena.plugin.naa.NaaPackageFileType
 #dependancies = au/gov/naa/digipres/xena/plugin/basic
 helpsets= doc/NaaHelp
 views = au.gov.naa.digipres.xena.plugin.naa.NaaPackageView
