--- a/.classpath
+++ b/.classpath
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="ext/jdom.jar" sourcepath="C:/Program Files/Java/doc/src"/>
-	<classpathentry kind="lib" path="ext/chardet.jar" sourcepath="C:/Program Files/Java/doc/src"/>
-	<classpathentry kind="lib" path="ext/jhall.jar" sourcepath="C:/Program Files/Java/doc/src"/>
+	<classpathentry kind="lib" path="ext/jdom.jar" />
+	<classpathentry kind="lib" path="ext/chardet.jar" />
+	<classpathentry kind="lib" path="ext/jhall.jar" />
 	<classpathentry kind="lib" path="ext/xalan.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="ext/serializer.jar"/>
