--- a/build.xml
+++ b/build.xml
@@ -101,7 +101,7 @@
     	<copy todir="${xenaplugindir}">
     			<fileset dir="${distdir}"/>
 		</copy>
-		<copy todir="../dpr/plugins">
+		<copy todir="../dpr/dist/plugins">
 			<fileset dir="${distdir}"/>
 		</copy>
 	</target>
