--- a/.classpath
+++ b/.classpath
@@ -6,18 +6,18 @@
 	<classpathentry kind="lib" path="ext/jdom.jar"/>
 	<classpathentry kind="lib" path="ext/jimi.jar"/>
 	<classpathentry kind="lib" path="ext/batik/batik-awt-util.jar"/>
-	<classpathentry kind="lib" path="ext/batik/batik-bridge.jar" sourcepath="C:/Program Files/Java/doc/src"/>
+	<classpathentry kind="lib" path="ext/batik/batik-bridge.jar" />
 	<classpathentry kind="lib" path="ext/batik/batik-css.jar"/>
-	<classpathentry kind="lib" path="ext/batik/batik-dom.jar" sourcepath="C:/Program Files/Java/doc/src"/>
+	<classpathentry kind="lib" path="ext/batik/batik-dom.jar" />
 	<classpathentry kind="lib" path="ext/batik/batik-ext.jar"/>
 	<classpathentry kind="lib" path="ext/batik/batik-extension.jar"/>
 	<classpathentry kind="lib" path="ext/batik/batik-gui-util.jar"/>
 	<classpathentry kind="lib" path="ext/batik/batik-gvt.jar"/>
 	<classpathentry kind="lib" path="ext/batik/batik-parser.jar"/>
 	<classpathentry kind="lib" path="ext/batik/batik-script.jar"/>
-	<classpathentry kind="lib" path="ext/batik/batik-svg-dom.jar" sourcepath="C:/Program Files/Java/doc/src"/>
+	<classpathentry kind="lib" path="ext/batik/batik-svg-dom.jar" />
 	<classpathentry kind="lib" path="ext/batik/batik-svggen.jar"/>
-	<classpathentry kind="lib" path="ext/batik/batik-swing.jar" sourcepath="C:/Program Files/Java/doc/src"/>
+	<classpathentry kind="lib" path="ext/batik/batik-swing.jar" />
 	<classpathentry kind="lib" path="ext/batik/batik-transcoder.jar"/>
 	<classpathentry kind="lib" path="ext/batik/batik-util.jar"/>
 	<classpathentry kind="lib" path="ext/batik/batik-xml.jar"/>
