Extracting XMP and EXIF metadata from TIFF files and storing it in the xena XML. Now have a separate guesser and normaliser for TIFF files.

--- a/build.xml
+++ b/build.xml
@@ -69,6 +69,7 @@
         	</fileset>
         	<fileset dir=".">
 	    		<include name = "images/*.*"/>
+        		<include name = "etc/*"/>
 	    		<include name = "*.properties"/>
 	    		<include name = "doc/**/*.*"/>
         	</fileset>
