Send to xena copying to DPR dist plugins directory

--- a/build.xml
+++ b/build.xml
@@ -11,6 +11,7 @@
 	<property name="imagesdir" value="images"/>
 	<property name="xenaplugindir" value="../xena/dist/plugins"/>
 	<property name="dprplugindir" value="../dpr/plugins"/>
+	<property name="dprdistplugindir" value="../dpr/dist/plugins"/>
 
 	<!-- required project jar files -->
 	<property name="xenajar" value="../xena/dist/xena.jar" />
@@ -95,6 +96,11 @@
     			<fileset dir="${distdir}">
     				<include name="${pluginname}.jar"/>
     			</fileset>
+		</copy>
+    	<copy todir="${dprdistplugindir}">
+			<fileset dir="${distdir}">
+				<include name="${pluginname}.jar"/>
+			</fileset>
 		</copy>
 	</target>
 	
